# gravity

./: .gitignore  AUTHORS  Pipfile  README.md  app.py  config-generator.conf  default.cfg  gravity.default.conf  setup.cfg
contrib/systemd/: gravity.service
gravity/: action.py  app.py  backend.py  client.py  config.py  database.py  frontend.py  logger.py  model.py  project.py  server.py  worklog.py
gravity/backend/: client.py  writer.py
gravity/frontend/: curses.py
tests/: conftest.py  test_database.py
