[metadata]
name = gravity
description = Time tracking for project-based workloads
author = rmk2
author-email = ryko@rmk2.org
home-page = https://bitbucket.org/rmk2/gravity/
license = GPL-3.0-or-later
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

[flake8]
max-line-length=119

[yapf]
based_on_style = pep8
column_limit = 119

[entry_points]
console_scripts =
    gravity = app:main
oslo.config.opts =
    gravity = gravity.config:list_opts

[extras]
test =
    pytest==5.4.3
dev =
    pbr==5.4.5
